--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "storybook": "start-storybook -p 8000",
     "build": "build-storybook -c .storybook -o public",
-    "deploy": "now --name storybook-addon-theme-playground"
+    "deploy": "now --name storybook-addon-theme-playground --prod"
   },
   "author": "Johannes Eslage",
   "license": "MIT",
@@ -18,6 +18,6 @@
     "@babel/core": "^7.7.7",
     "@storybook/react": "^5.2.8",
     "babel-loader": "^8.0.6",
-    "storybook-addon-theme-provider": "^1.0.0"
+    "storybook-addon-theme-playground": "^1.0.1"
   }
 }
