--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "storybook-addon-theme-playground",
   "version": "1.1.0",
-  "description": "Yet another theme addon for storybook. It provides a panel where you can tweek the theme values directly.",
+  "description": "Select between themes and tweek them directly in a panel.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
