--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "lodash.startcase": "^4.4.0",
     "react-color": "^2.17.3"
   },
   "devDependencies": {
