--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build": "build-storybook -o public",
+    "deploy": "now --name storybook-addon-theme-playground --prod"
   }
 }
