Updated input components, added icon override prop, added a different color picker

--- a/package.json
+++ b/package.json
@@ -48,14 +48,13 @@
   },
   "dependencies": {
     "lodash.startcase": "^4.4.0",
-    "react-color": "^2.17.3"
+    "react-pick-color": "^1.0.0"
   },
   "devDependencies": {
     "@storybook/addons": "^5.2.8",
     "@storybook/react": "^5.2.8",
     "@types/node": "^13.9.3",
     "@types/react": "16.9.25",
-    "@types/react-color": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
