--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "register.js"
   ],
   "scripts": {
     "build": "npm run clean && tsc -p .",
@@ -47,8 +48,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "lodash.startcase": "^4.4.0",
-    "react-pick-color": "^1.0.0"
+    "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
     "@storybook/addons": "^6.0.21",
@@ -69,7 +69,7 @@
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
-    "@storybook/addons": "^5.2.0",
-    "@storybook/react": "^5.2.0"
+    "@storybook/addons": "^6.0.0",
+    "@storybook/react": "^6.0.0"
   }
 }
