--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "storybook-addon-theme-playground",
-  "version": "1.3.4",
+  "version": "2.0.0",
   "description": "Select between themes and tweak them directly in a panel.",
   "keywords": [
     "storybook",
@@ -18,7 +18,8 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist",
-    "register.js"
+    "register.js",
+    "preset.js"
   ],
   "scripts": {
     "build": "npm run clean && tsc -p .",
@@ -49,10 +50,15 @@
     "trailingComma": "none"
   },
   "dependencies": {
+    "@storybook/addons": "6.1.2",
+    "@storybook/api": "6.1.2",
+    "@storybook/client-api": "6.1.2",
+    "@storybook/client-logger": "6.1.2",
+    "@storybook/components": "6.1.2",
+    "@storybook/theming": "6.1.2",
     "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
-    "@storybook/addons": "^6.0.21",
     "@storybook/react": "^6.0.21",
     "@types/node": "^14.6.4",
     "@types/react": "16.9.49",
@@ -70,7 +76,8 @@
     "typescript": "^4.0.2"
   },
   "peerDependencies": {
-    "@storybook/addons": "^6.0.0",
+    "react": "^16.8.0 || ^17.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0",
     "@storybook/react": "^6.0.0"
   }
 }
