--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.3",
-    "@storybook/react": "^6.1.2",
+    "@storybook/react": "6.0.22",
     "babel-loader": "^8.2.1",
     "react-is": "^17.0.1",
     "storybook-addon-theme-playground": "^2.0.0"
