--- a/package.json
+++ b/package.json
@@ -50,34 +50,34 @@
     "trailingComma": "none"
   },
   "dependencies": {
-    "@storybook/addons": "6.1.2",
-    "@storybook/api": "6.1.2",
-    "@storybook/client-api": "6.1.2",
-    "@storybook/client-logger": "6.1.2",
-    "@storybook/components": "6.1.2",
-    "@storybook/theming": "6.1.2",
+    "@storybook/addons": "6.1.15",
+    "@storybook/api": "6.1.15",
+    "@storybook/client-api": "6.1.15",
+    "@storybook/client-logger": "6.1.15",
+    "@storybook/components": "6.1.15",
+    "@storybook/theming": "6.1.15",
     "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
     "@storybook/react": "^6.0.21",
-    "@types/node": "^14.6.4",
-    "@types/react": "16.9.49",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.3.0",
-    "prettier": "^2.1.1",
-    "rimraf": "^3.0.0",
-    "typescript": "^4.0.2"
+    "@types/node": "^14.14.22",
+    "@types/react": "17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.1.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17.0.0",
-    "react-dom": "^16.8.0 || ^17.0.0",
-    "@storybook/react": "^6.0.0"
+    "@storybook/react": "^6.1.15",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
