--- a/package.json
+++ b/package.json
@@ -16,13 +16,8 @@
     "displayName": "Theme Playground",
     "supportedFrameworks": ["React"]
   },
-  "bugs": {
-    "url": "https://github.com/jeslage/storybook-addon-theme-playground/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "jeslage/storybook-addon-theme-playground"
-  },
+  "bugs": "https://github.com/jeslage/storybook-addon-theme-playground/issues",
+  "repository": "jeslage/storybook-addon-theme-playground",
   "license": "MIT",
   "author": "Johannes Eslage",
   "main": "dist/index.js",
