Added theme name to provider function, updated types

--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@storybook/react": "^6.1.15",
+    "@storybook/html": "^6.4.9",
+    "@storybook/react": "^6.4.9",
     "babel-loader": "^8.2.2",
     "react-is": "^17.0.1",
     "storybook-addon-theme-playground": "^2.1.0"
