--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
   },
   "rules": {
     "no-empty-function": "off",
+    "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-unused-vars": "error",
