--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
+    "dist/**/*",
     "README.md",
-    "register.js",
-    "preset.js"
+    "*.js",
+    "*.d.ts",
+    "!src/**/*"
   ],
   "scripts": {
     "build": "npm run clean && tsc -p .",
@@ -60,34 +61,38 @@
     "trailingComma": "none"
   },
   "dependencies": {
-    "@storybook/addons": "6.1.15",
-    "@storybook/api": "6.1.15",
-    "@storybook/client-api": "6.1.15",
-    "@storybook/client-logger": "6.1.15",
-    "@storybook/components": "6.1.15",
-    "@storybook/theming": "6.1.15",
+    "@storybook/api": "7.4.1",
+    "@storybook/blocks": "^7.4.1",
+    "@storybook/client-api": "7.4.1",
+    "@storybook/client-logger": "7.4.1",
+    "@storybook/components": "7.4.1",
+    "@storybook/manager-api": "^7.4.1",
+    "@storybook/preview-api": "^7.4.1",
+    "@storybook/theming": "7.4.1",
     "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
-    "@storybook/react": "^6.0.21",
-    "@types/node": "^14.14.22",
-    "@types/react": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^4.1.3"
+    "@storybook/react": "^7.4.1",
+    "@types/node": "^20.6.0",
+    "@types/react": "18.2.21",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.3",
+    "react": "^18.0.1",
+    "react-dom": "^18.0.1",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
-    "@storybook/react": "^6.1.15",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "@storybook/react": "^7.0.20",
+    "react": "^18.0.1",
+    "react-dom": "^18.0.1"
   }
 }
