--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "CommonJS",
     "sourceMap": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -19,8 +19,15 @@
     "moduleResolution": "node",
     "noImplicitAny": false,
     "incremental": false,
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "ignoreDeprecations": "5.0",
+    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "strictBindCallApply": true,
+    "noUnusedLocals": true,
+    "strict": false
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["dist", "node_modules",],
 }
