--- a/example/package.json
+++ b/example/package.json
@@ -7,17 +7,17 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
-    "@storybook/addon-essentials": "^7.4.1",
-    "@storybook/addon-interactions": "^7.4.1",
-    "@storybook/addon-links": "^7.4.1",
-    "@storybook/blocks": "^7.4.1",
-    "@storybook/react": "^7.4.1",
-    "@storybook/react-webpack5": "^7.4.1",
+    "@storybook/addon-essentials": "7.0.2",
+    "@storybook/addon-interactions": "7.0.2",
+    "@storybook/addon-links": "7.0.2",
+    "@storybook/blocks": "7.0.2",
+    "@storybook/react": "7.0.2",
+    "@storybook/react-webpack5": "7.0.2",
     "@storybook/testing-library": "^0.2.0",
     "babel-loader": "^9.1.2",
     "prop-types": "^15.8.1",
     "react-is": "^18.2.0",
-    "storybook": "^7.4.1",
+    "storybook": "7.0.2",
     "storybook-addon-theme-playground": "^2.2.0"
   },
   "dependencies": {
