--- a/package.json
+++ b/package.json
@@ -34,15 +34,21 @@
   ],
   "scripts": {
     "build": "npm run clean && tsc -p .",
+    "commit": "cz",
     "build:watch": "npm run clean && tsc -p . -w",
     "clean": "rimraf dist",
-    "deploy-example": "cd example && yarn deploy",
+    "deploy-example": "cd example && npm run deploy",
     "lint": "eslint ./src --ext ts --ext tsx",
     "prepare": "npm run build",
     "prettier-write": "prettier --write \"src/**/*.tsx\"",
-    "prepublish": "yarn prettier-write && yarn lint && yarn type-check",
+    "prepublish": "npm run prettier-write && npm run lint && npm run type-check",
     "test": "echo \"No test specified\"",
     "type-check": "tsc --pretty --noEmit"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "husky": {
     "hooks": {
@@ -51,8 +57,8 @@
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
-      "yarn lint",
-      "yarn prettier-write"
+      "npm rum lint",
+      "npm rum prettier-write"
     ]
   },
   "prettier": {
@@ -72,11 +78,17 @@
     "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/github": "^9.0.3",
+    "@semantic-release/npm": "^10.0.4",
+    "@semantic-release/release-notes-generator": "^11.0.3",
     "@storybook/react": "^7.0.2",
     "@types/node": "^20.6.0",
     "@types/react": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
@@ -88,6 +100,7 @@
     "react": "^18.0.1",
     "react-dom": "^18.0.1",
     "rimraf": "^5.0.1",
+    "semantic-release": "^21.0.6",
     "typescript": "^5.2.2"
   },
   "peerDependencies": {
