--- a/.releaserc.json
+++ b/.releaserc.json
@@ -6,7 +6,7 @@
     "@semantic-release/changelog",
     "@semantic-release/npm",
     [
-      "@semantic-release/git",
+      "@semantic-release/github",
       {
         "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
