--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,12 @@
     [
       "@semantic-release/github",
       {
-        "assets": ["package.json", "package-lock.json", "CHANGELOG.md"],
+        "assets": ["package.json", "CHANGELOG.md", "README.md", "dist/**/*"]
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ]
