--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-node_modules
-dist
-yarn-error.log
-.cache
-example-old
+dist/
+node_modules/
+storybook-static/
+build-storybook.log
+.DS_Store
+.env
