--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,18 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "sourceMap": false,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "skipLibCheck": true,
-    "declaration": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "lib": ["es2017", "dom"],
-    "jsx": "react",
-    "types": ["node"],
-    "declarationDir": "dist",
-    "outDir": "dist",
-    "noUnusedParameters": true,
-    "strictNullChecks": true,
-    "moduleResolution": "node",
-    "noImplicitAny": false,
-    "incremental": false,
-    "skipDefaultLibCheck": true,
-    "ignoreDeprecations": "5.0",
     "baseUrl": ".",
-    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "incremental": false,
     "isolatedModules": true,
-    "strictBindCallApply": true,
-    "noUnusedLocals": true,
-    "strict": false
+    "jsx": "react",
+    "lib": ["es2020", "dom"],
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "rootDir": "./src",
+    "skipLibCheck": true,
+    "target": "ES2020"
   },
-  "include": ["src/**/*"],
-  "exclude": ["dist", "node_modules",],
+  "include": ["src/**/*"]
 }
