--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "build": "tsup",
     "build:watch": "yarn build --watch",
     "start": "run-p build:watch 'storybook --quiet'",
-    "prerelease": "zx scripts/prepublish-checks.mjs",
-    "release": "yarn build && auto shipit",
+    "release": "yarn build && semantic-release",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build -o public",
-    "deploy": "vercel --prod"
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.0.3",
+    "@semantic-release/npm": "^10.0.4",
+    "@semantic-release/release-notes-generator": "^11.0.3",
     "@storybook/blocks": "^7.0.0",
     "@storybook/components": "^7.0.0",
     "@storybook/core-events": "^7.0.0",
@@ -66,23 +69,20 @@
     "@types/node": "^18.15.0",
     "@types/react": "^18.0.34",
     "@vitejs/plugin-react": "^3.1.0",
-    "auto": "^10.3.0",
-    "boxen": "^5.0.1",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "dedent": "^0.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "rimraf": "^3.0.2",
+    "semantic-release": "^21.0.6",
     "storybook": "^7.0.0",
     "styled-components": "^6.0.8",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5",
-    "vite": "^4.1.4",
-    "zx": "^1.14.1"
+    "vite": "^4.1.4"
   },
   "resolutions": {
     "jackspeak": "2.1.1"
